    + HTML reader: Don't interpret contents of <pre> blocks as markdown.
      Added rawVerbatimBlock parser.  Resolves Issue #94.

  * Markdown reader:
  
    + Ignore blank line after ~~~~~~~~ in delimited code blocks.
      Rationale:  these are useful for literate haskell, but lhs requires
      a blank line before the haskell code, and we don't want spurious
      blank lines in the output.

    + Allow URLs with spaces in them in links and references.

  * HTML writer:

    + Include classes on tr elements in HTML output:
      "header", "odd", "even".  This allows tables to be styled with
      lines in alternating colors.  Resolves Issue #91.

    + Enclose all LaTeXMathML bits in <span class="LaTeX">.
      This prevents parts of the document that are not math from being
      interpreted as math by LaTeXMathML.js.

  * Text.Pandoc.Shared:  Modified wrappedTeX to eliminate the line break
    between a footnote and immediately following nonspace characters in
    LaTeX and ConTeXt output. (This gets interpreted as a space, which
    is not desired in cases like "text^[note]---".)  Resolves Issue #93.

  * Windows installer: Don't require admin privileges to run
    installer.  Modified pandoc-setup.iss, and changed modpath.iss to
    modify HKCU path if user lacks admin privileges.  Also fixed case
    where oldpath is empty (previously this led to the new path
    beginning with a semicolon).


pandoc (1.0.0.1)

  [ John MacFarlane ]

  * Removed spurious reference to pdf output format from pandoc(1) man page.

pandoc (1.0)

  [ Andrea Rossato ]

  * Added new OpenDocument writer.

  * Added support for SmallCaps inline element.

  * Added support for integrating pandoc with citeproc-hs.

    + Added Cite element to definition and writers.
    + Added Text.Pandoc.Biblio module
    + Note: This support is included only if the 'citeproc'
      Cabal configuration flag is set.

  * Made Pandoc data structure an instance of Typeable.